# advent_of_code_2025

./: Cargo.toml  README.md  bacon.toml  mise.toml
benches/: benchmark.rs
day01/src/: main.rs
src/: main.rs
src/day01/: mod.rs  p1.rs  p2.rs
src/day02/: mod.rs  p1.rs  p2.rs
src/day03/: mod.rs  p1.rs  p2.rs
src/day04/: mod.rs  p1.rs  p2.rs
src/day05/: mod.rs  p1.rs  p2.rs
src/day06/: p1.rs  p2.rs
src/day07/: mod.rs  p1.rs  p2.rs
src/day08/: mod.rs  p1.rs  p2.rs
src/day09/: mod.rs  p1.rs  p2.rs
src/day10/: mod.rs  p1.rs  p2.rs  p2_lp.rs
src/day11/: mod.rs  p1.rs  p2.rs
src/day12/: p1.rs
