[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[[bench]]
harness = false
name = "benchmark"

[dependencies]
divan = "0.1.21"
good_lp = { version = "1.14.2", default-features = false, features = [
  "microlp",
] }
indicatif = { version = "0.18.3", features = ["rayon"] }
itertools = { version = "0.14.0" }
rayon = "1.11.0"
wide = "1.1.0"
